--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-mdx": "^1.0.33",
+    "gatsby-plugin-netlify-cms": "^4.3.0",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.6",
@@ -29,6 +30,7 @@
     "gatsby-transformer-remark": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.3",
     "mdx-utils": "^0.2.0",
+    "netlify-cms-app": "^2.12.11",
     "prism-react-renderer": "^0.1.5",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
